Add contract Core Service
